<resources>
    <string name="app_name">Krayrr</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="start_RIDING">START RIDING</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account_now">Create Account?</string>
    <string name="u00a9_2018_krayrr">© 2018 KRAYRR</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">Krayrr</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User@test.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dashboard_fragment">Hello Dashboard fragment</string>
    <string name="home_fragment">Hello Home fragment</string>
    <string name="notifications_fragment">Hello notifications fragment</string>
    <string name="directionsApiKey">AIzaSyBG_eCPrTbSVI7ytfXc5o5Etovl3VAYB0A</string>

</resources>
