<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:contentDescription="@string/app_name">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:id="@+id/logo_krayrr"
                android:src="@drawable/krayrr_logo"/>

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/curve"
                    android:textColorHint="@android:color/black"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="167dp" />



                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/curve"
                    android:textColorHint="@android:color/black"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="248dp" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/curve_button"
                android:text="@string/start_RIDING"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="318dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:text="@string/create_account_now"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="100dp"
                android:text="@string/u00a9_2018_krayrr"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>